--- a/po/de/kpaint.po
+++ b/po/de/kpaint.po
@@ -1,14 +1,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: kpaint\n"
-"POT-Creation-Date: 1998-11-15 01:52+0100\n"
-"PO-Revision-Date: 1998-05-07 14:04 +0100\n"
-"Last-Translator: Tobias Burnus <burnus@berlin1.netsurf.de>\n"
+"POT-Creation-Date: 1998-11-14 01:52+0100\n"
+"PO-Revision-Date: 1998-11-14 14:04 +0100\n"
 "Language-Team: German <kde-i18n@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: iso-8859-1\n"
 "Translator: Oliver Hensel <oliver.hensel@gmx.de>\n"
+"Last-Translator: Thomas Diehl <th_diehl@csi.com>\n"
 
 #: kpaint.cpp:76 kpaint.cpp:751
 msgid "untitled.gif"
@@ -67,11 +67,11 @@ msgstr "Bildformat..."
 
 #: kpaint.cpp:436
 msgid "Open from URL..."
-msgstr "Aus einem URL öffnen..."
+msgstr "Aus URL öffnen..."
 
 #: kpaint.cpp:437
 msgid "Save to URL..."
-msgstr "In einen URL speichern..."
+msgstr "In URL speichern..."
 
 #: kpaint.cpp:439
 msgid "New Window"
@@ -83,15 +83,15 @@ msgstr "Fenster schließen"
 
 #: kpaint.cpp:445
 msgid "Copy Region"
-msgstr "Region kopieren"
+msgstr "Bereich kopieren"
 
 #: kpaint.cpp:446
 msgid "Cut Region"
-msgstr "Region ausschneiden"
+msgstr "Bereich ausschneiden"
 
 #: kpaint.cpp:447
 msgid "Paste Region"
-msgstr "Region einfügen"
+msgstr "Bereich einfügen"
 
 #: kpaint.cpp:448
 msgid "Paste As Image"
@@ -99,7 +99,7 @@ msgstr "Als Bild einfügen"
 
 #: kpaint.cpp:452
 msgid "Mask..."
-msgstr "Maskieren..."
+msgstr "Maske anlegen..."
 
 #: kpaint.cpp:455
 msgid "Information..."
@@ -143,15 +143,11 @@ msgstr "KPaint"
 
 #: kpaint.cpp:495
 msgid " version "
-msgstr ""
+msgstr "Version"
 
 #: kpaint.cpp:496
-#, fuzzy
 msgid "(c) "
-msgstr ""
-"\n"
-"\n"
-"(c) "
+msgstr "(c) "
 
 #: kpaint.cpp:505
 msgid "&Image"
@@ -159,7 +155,7 @@ msgstr "B&ild"
 
 #: kpaint.cpp:506
 msgid "&Tool"
-msgstr "&Werkzeuge"
+msgstr "&Werkzeug"
 
 #: kpaint.cpp:681
 msgid "KPaint: Could not open file"
@@ -184,7 +180,7 @@ msgid ""
 "or the file is corrupt."
 msgstr ""
 "Fehler: Unbekanntes Format\n"
-"KPaint versteht das Format der angegebenen Datei nicht,\n"
+"KPaint kennt das Format der angegebenen Datei nicht,\n"
 "oder die Datei ist beschädigt."
 
 #: ellipse.cpp:16 ellipse.cpp:23 manager.cpp:65
@@ -217,7 +213,7 @@ msgstr "Sprühdose"
 
 #: manager.cpp:79
 msgid "Text"
-msgstr ""
+msgstr "Text"
 
 #: manager.cpp:81
 msgid "Area Select"
@@ -245,7 +241,7 @@ msgstr "Bildhöhe:"
 
 #: infodialog.cpp:94 palettedialog.cpp:14
 msgid "Dismiss"
-msgstr "Schliessen"
+msgstr "Schließen"
 
 #: palette.cpp:100
 msgid "Edit Colour"
@@ -297,7 +293,7 @@ msgstr "Horizontale Linien"
 
 #: properties.cpp:80 properties.cpp:134
 msgid "Grid"
-msgstr "Raster"
+msgstr "Gitter"
 
 #: properties.cpp:81 properties.cpp:135
 msgid "Diagonal Lines //"
@@ -309,7 +305,7 @@ msgstr "Diagonale Linien \\"
 
 #: properties.cpp:83 properties.cpp:137
 msgid "Diagonal Grid"
-msgstr "Diagonales Gitter"
+msgstr "Diagonal-Gitter"
 
 #: properties.cpp:93
 msgid "Custom"
@@ -372,68 +368,33 @@ msgid "Image Depth:"
 msgstr "Farbtiefe:"
 
 #: depthdialog.cpp:24
-#, fuzzy
 msgid "1 (2 Colours)"
-msgstr "8 (256 Farben)"
+msgstr "1 (2 Farben)"
 
 #: depthdialog.cpp:25
-#, fuzzy
 msgid "4 (16 Colours)"
-msgstr "8 (256 Farben)"
+msgstr "4 (16 Farben)"
 
 #: depthdialog.cpp:26
-#, fuzzy
 msgid "8 (256 Colours)"
 msgstr "8 (256 Farben)"
 
 #: depthdialog.cpp:27
-#, fuzzy
 msgid "15 (32k Colours)"
-msgstr "8 (256 Farben)"
+msgstr "15 (32k Farben)"
 
 #: depthdialog.cpp:28
-#, fuzzy
 msgid "16 (64k Colours)"
-msgstr "8 (256 Farben)"
+msgstr "16 (64k Farben)"
 
 #: depthdialog.cpp:29
 msgid "24 (True Colour)"
 msgstr "24 (Echtfarben)"
 
 #: depthdialog.cpp:30
-#, fuzzy
 msgid "32 (True Colour)"
-msgstr "24 (Echtfarben)"
+msgstr "32 (Echtfarben)"
 
 #: roundangle.cpp:19
 msgid "Roundangle"
 msgstr "Runde Ecken"
-
-#~ msgid ""
-#~ "\n"
-#~ "(c) Richard J. Moore 1997 Released under GPL see LICENSE for details\n"
-#~ msgstr ""
-#~ "\n"
-#~ "(C) Richard J. Moore 1997, veröffentlicht unter der GPL, lesen Sie die Datei "
-#~ "LICENSE für Einzelheiten\n"
-
-#~ msgid "Usage: "
-#~ msgstr "Aufruf:"
-
-#~ msgid " [url | filename]\n"
-#~ msgstr " [URL | Dateiname]\n"
-
-#~ msgid "Exit"
-#~ msgstr "Ende"
-
-#~ msgid "Open Location:"
-#~ msgstr "URL öffnen:"
-
-#~ msgid "Save to Location:"
-#~ msgstr "In URL speichern:"
-
-#~ msgid "1 (Bitmap)"
-#~ msgstr "1 (Bitmap)"
-
-#~ msgid "Continue"
-#~ msgstr "Fortsetzen"
