--- a/po/de/kiconedit.po
+++ b/po/de/kiconedit.po
@@ -1,14 +1,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: kiconedit\n"
-"POT-Creation-Date: 1998-11-12 01:50+0100\n"
+"POT-Creation-Date: 1998-11-16 01:58+0100\n"
 "PO-Revision-Date: 1998-11-13 23:00+MET\n"
+"Last-Translator: Thomas Diehl <th_diehl@csi.com>\n"
 "Language-Team: German <kde-i18n@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: ENCODING\n"
 "Translator: Gregor Zumstein <zumstein@ssd.ethz.ch>\n"
-"Last-Translator: Thomas Diehl <th_diehl@csi.com>\n"
 
 #: utils.cpp:65
 #, c-format
@@ -294,10 +294,12 @@ msgid ""
 msgstr ""
 "Icon Zeichengitter\n"
 "\n"
-"Das Icon Zeichengitter ist der Bereich, in den Sie die Icons hineinzeichnen.\n"
-"Mit dem Vergrößerungsglas auf der Werkzeugleiste können Sie hinein- und herauszoomen.\n"
-"(Tip: Halten Sie den Vergrößerungsknopf für einige Sekunden gedrückt, "
-"um auf eine vordefinierte Größe einzustellen.)"
+"Das Icon Zeichengitter ist der Bereich, in den Sie die Icons "
+"hineinzeichnen.\n"
+"Mit dem Vergrößerungsglas auf der Werkzeugleiste können Sie hinein- und "
+"herauszoomen.\n"
+"(Tip: Halten Sie den Vergrößerungsknopf für einige Sekunden gedrückt, um auf "
+"eine vordefinierte Größe einzustellen.)"
 
 #: kiconedit.cpp:790
 msgid ""
@@ -324,8 +326,8 @@ msgid ""
 msgstr ""
 "Statusbar\n"
 "\n"
-"Die Statusleiste informiert über den Status des aktuellen Icons. "
-"Die Felder bedeuten:\n"
+"Die Statusleiste informiert über den Status des aktuellen Icons. Die Felder "
+"bedeuten:\n"
 "\n"
 "\t- Cursorposition\n"
 "\t- Größe\n"
@@ -373,7 +375,8 @@ msgid ""
 msgstr ""
 "Neu\n"
 "\n"
-"Erstellen Sie ein neues Icon von einer Vorlage oder indem Sie die Größe festlegen"
+"Erstellen Sie ein neues Icon von einer Vorlage oder indem Sie die Größe "
+"festlegen"
 
 #: kiconedit.cpp:818
 msgid ""
@@ -404,8 +407,8 @@ msgid ""
 msgstr ""
 "Drucken\n"
 "\n"
-"Öffnet einen Druckdialog, um Sie das aktuelle Icon drucken zu lassen. (Funktioniert nich würklich "
-"wie man erwarten sollte.)"
+"Öffnet einen Druckdialog, um Sie das aktuelle Icon drucken zu lassen. "
+"(Funktioniert nich würklich wie man erwarten sollte.)"
 
 #: kiconedit.cpp:828
 msgid ""
@@ -451,8 +454,8 @@ msgstr ""
 "\n"
 "Fügen Sie den Inhalt der Zwischenablage in das aktuelle Icon ein.\n"
 "\n"
-"Wenn der Inhalt größer ist als das aktuelle Icon, können Sie ihn "
-"in ein neues Fenster einfügen.\n"
+"Wenn der Inhalt größer ist als das aktuelle Icon, können Sie ihn in ein "
+"neues Fenster einfügen.\n"
 "\n"
 "(Tip: Wählen Sie \"Transparente Pixel einfügen\" im Konfigurations-Dialog, "
 "wenn Sie auch etwas Transparentes einfügen möchten)"
@@ -491,7 +494,8 @@ msgstr ""
 "Graustufen\n"
 "\n"
 "Aktuelles Icon in Graustufen umsetzen.\n"
-"(Warnung: Das Ergebnis enthält wahrscheinlich Farben außerhalb der Iconpalette)"
+"(Warnung: Das Ergebnis enthält wahrscheinlich Farben außerhalb der "
+"Iconpalette)"
 
 #: kiconedit.cpp:854
 msgid ""
@@ -505,7 +509,8 @@ msgstr ""
 "\n"
 "Um eins verkleinern.\n"
 "\n"
-"(Tip: Halten Sie den Knopf für einige Sekunden gedrückt, um auf eine vordefinierte Größe einzustellen"
+"(Tip: Halten Sie den Knopf für einige Sekunden gedrückt, um auf eine "
+"vordefinierte Größe einzustellen"
 
 #: kiconedit.cpp:858
 msgid ""
@@ -519,7 +524,8 @@ msgstr ""
 "\n"
 "Um eins vergrößern.\n"
 "\n"
-"(Tip: Halten Sie den Knopf für einige Sekunden gedrückt, um auf eine vordefinierte Größe einzustellen"
+"(Tip: Halten Sie den Knopf für einige Sekunden gedrückt, um auf eine "
+"vordefinierte Größe einzustellen"
 
 #: kiconedit.cpp:862
 msgid ""
@@ -563,11 +569,12 @@ msgid ""
 msgstr ""
 "Quellicon ziehen\n"
 "\n"
-"Mit diesem Knopf können Sie eine Kopie des aktuellen Icons ziehen und es in ein "
-"Fenster fallen lassen, das dafür eingerichtet ist, z.B. ein weiterer Icon-Editor.\n"
+"Mit diesem Knopf können Sie eine Kopie des aktuellen Icons ziehen und es in "
+"ein Fenster fallen lassen, das dafür eingerichtet ist, z.B. ein weiterer "
+"Icon-Editor.\n"
 "\n"
-"(Anm.: Die \"Quelle\" (drag source) benutzt das QT XDND Protokoll, das in KDE noch "
-"nicht Standard ist)"
+"(Anm.: Die \"Quelle\" (drag source) benutzt das QT XDND Protokoll, das in "
+"KDE noch nicht Standard ist)"
 
 #: kiconedit.cpp:879
 msgid ""
@@ -692,8 +699,9 @@ msgstr ""
 "\n"
 "Pixel wegradieren. Pixel transparent machen\n"
 "\n"
-"(Tip: Wenn Sie mit einem anderen Werkzeug transparent zeichnen möchten, dann klicken "
-"Sie auf \"Radieren\" und anschließend auf das Werkzeug, das Sie benutzen wollen)"
+"(Tip: Wenn Sie mit einem anderen Werkzeug transparent zeichnen möchten, dann "
+"klicken Sie auf \"Radieren\" und anschließend auf das Werkzeug, das Sie "
+"benutzen wollen)"
 
 #: kicongrid.cpp:684
 msgid "There was an error loading a blank image.\n"
