--- a/po/pt_BR/kfax.po
+++ b/po/pt_BR/kfax.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: kuser\n"
-"POT-Creation-Date: 1998-11-16 01:58+0100\n"
+"POT-Creation-Date: 1998-11-14 01:52+0100\n"
 "PO-Revision-Date: 1998-03-23 00:00+0100\n"
 "Last-Translator: Sandro Henrique <sandro@conectiva.com.br>\n"
 
@@ -82,9 +82,8 @@ msgid "Zoom &out"
 msgstr "&Diminuir"
 
 #: kfax.cpp:433
-#, fuzzy
 msgid "&Fax Options..."
-msgstr "Opções do &Fax"
+msgstr "Opções do &Fax..."
 
 #: kfax.cpp:435
 msgid "&Tool Bar"
@@ -242,7 +241,7 @@ msgstr ""
 msgid ""
 "Unable to open:\n"
 "%s\n"
-msgstr ""
+msgstr "Impossível abrir:\n%s\n"
 
 #: print.cpp:51
 msgid "KFax Print Dialog"
