--- a/po/pt_BR/kiconedit.po
+++ b/po/pt_BR/kiconedit.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 1998-11-16 01:58+0100\n"
+"POT-Creation-Date: 1998-11-14 01:52+0100\n"
 "PO-Revision-Date: 1998-09-08 09:00\n"
 "Last-Translator: Sandro Nunes Henrique <sandro@conectiva.com.br>\n"
 "Language-Team: pt_BR <LL@li.org>\n"
@@ -19,14 +19,12 @@ msgid "copyFile - There was an error opening destination file: %s"
 msgstr "copyFile - Houve um erro na abertura do arquivo de destino: %s"
 
 #: utils.cpp:72
-#, fuzzy, c-format
 msgid "copyFile - There was an error reading source file: %s"
-msgstr "copyFile - Houve um erro na abertura do arquivo de origem: %s"
+msgstr "copyFile - Houve um erro na abertura do arquivo-fonte: %s"
 
 #: utils.cpp:80
-#, fuzzy, c-format
 msgid "copyFile - There was an error writing to destination file: %s"
-msgstr "copyFile - Houve um erro na abertura do arquivo de destino: %s"
+msgstr "copyFile - Houve um erro na gravação do arquivo de destino: %s"
 
 #: utils.cpp:93
 #, c-format
@@ -750,41 +748,39 @@ msgstr "Dados inválidos na área de troca!\n"
 
 #: kiconcombiview.cpp:81
 msgid "Folders:"
-msgstr ""
+msgstr "Pastas:"
 
 #: kiconcombiview.cpp:82
 msgid "Contents:"
-msgstr ""
+msgstr "Conteúdo:"
 
 #: kicondetaillist.cpp:50
 msgid "Name"
-msgstr ""
+msgstr "Nome"
 
 #: kicondetaillist.cpp:52
-#, fuzzy
 msgid "Size"
-msgstr "Tamanho:"
+msgstr "Tamanho"
 
 #: kicondetaillist.cpp:55
 msgid "Permissions"
-msgstr ""
+msgstr "Permissões"
 
 #: kicondetaillist.cpp:57
-#, fuzzy
 msgid "Date"
-msgstr "Colar"
+msgstr "Data"
 
 #: kicondetaillist.cpp:60
 msgid "Owner"
-msgstr ""
+msgstr "Dono"
 
 #: kicondetaillist.cpp:62
 msgid "Group"
-msgstr ""
+msgstr "Grupo"
 
 #: kicon.cpp:48
 msgid "There was an error removing temporary backup file:\n"
-msgstr ""
+msgstr "Houve um erro ao remover arquivo temporário de cópia:\n"
 "Houve um erro ao remover os arquivos temporários da cópia de segurança\n"
 
 #: kicon.cpp:74 kicon.cpp:258 kicon.cpp:342 kicon.cpp:445
@@ -803,7 +799,7 @@ msgstr "a URL:\n"
 msgid ""
 "\n"
 "seems to be malformed.\n"
-msgstr ""
+msgstr "\nparece estar mal formado.\n"
 
 #: kicon.cpp:100 kicon.cpp:146 kicon.cpp:169 kicon.cpp:181 kicon.cpp:194
 #: kicon.cpp:207 kicon.cpp:218 kicon.cpp:399 kicon.cpp:432
@@ -830,7 +826,7 @@ msgstr "O arquivo:\n"
 msgid ""
 "\n"
 "doesn't exist or isn't readable.\n"
-msgstr ""
+msgstr "\nnão existe ou não é legível.\n"
 
 #: kicon.cpp:160
 msgid ""
@@ -867,6 +863,10 @@ msgid ""
 "*.gif|GIF files (*.gif)\n"
 "*jpg|JPEG files (*.jpg)\n"
 msgstr ""
+"*|Todos os arquivos (*)\n"
+"*.xpm|XPM (*.xpm)\n"
+"*.gif|arquivos GIF (*.gif)\n"
+"*.jpg|arquivos JPEG (*.jpg)\n"
 
 #: kicon.cpp:283
 msgid "The KDE Icon Editor has found a recover\n"
@@ -946,7 +946,7 @@ msgstr "Criar um novo ícone"
 
 #: debug.cpp:20
 msgid "Fatal!"
-msgstr ""
+msgstr "Fatal!"
 
 #: kiconeditslots.cpp:403
 msgid "Sorry - not implemented."
