CVS_SILENT: made messages

--- a/po/pt_BR/kfract.po
+++ b/po/pt_BR/kfract.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 1998-11-14 01:52+0100\n"
+"POT-Creation-Date: 1998-11-16 01:58+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -58,7 +58,10 @@ msgid ""
 "\n"
 "\n"
 "by Uwe Thiem"
-msgstr "\n\npor Uwe Thiem"
+msgstr ""
+"\n"
+"\n"
+"por Uwe Thiem"
 
 #: kfract.C:99
 msgid "&Types"
@@ -184,4 +187,5 @@ msgstr "Fatores de ampliação"
 msgid ""
 "Fract::calcPoint() is an abstract method. You MUST\n"
 "re-write it!\n"
-msgstr "Fract::calcPoint() é um método abstrato. Você PRECISA sobrescrevê-lo!\n"
+msgstr ""
+"Fract::calcPoint() é um método abstrato. Você PRECISA sobrescrevê-lo!\n"
