--- a/po/fi/kpaint.po
+++ b/po/fi/kpaint.po
@@ -225,15 +225,11 @@ msgstr "KPaint"
 
 #: kpaint.cpp:495
 msgid " version "
-msgstr ""
+msgstr " versio"
 
 #: kpaint.cpp:496
-#, fuzzy
 msgid "(c) "
-msgstr ""
-"\n"
-"\n"
-"(c) "
+msgstr "(c) "
 
 #: kpaint.cpp:505
 msgid "&Image"
@@ -290,7 +286,7 @@ msgstr "Spraypurkki"
 
 #: manager.cpp:79
 msgid "Text"
-msgstr ""
+msgstr "Teksti"
 
 #: manager.cpp:81
 msgid "Area Select"
@@ -404,16 +400,3 @@ msgstr "Viivan väri..."
 msgid "Roundangle"
 msgstr "Monikulmio"
 
-#~ msgid ""
-#~ "\n"
-#~ "(c) Richard J. Moore 1997 Released under GPL see LICENSE for details\n"
-#~ msgstr ""
-#~ "\n"
-#~ "(c) Richard J. Moore 1997 Julkaistu GPL:n alla, katso LICENSE tiedostoa\n"
-#~ "lisätietojen saamiseksi\n"
-
-#~ msgid "Usage: "
-#~ msgstr "Käyttö: "
-
-#~ msgid " [url | filename]\n"
-#~ msgstr " [url | tiedostonimi]\n"
