--- a/po/fr/kdvi.po
+++ b/po/fr/kdvi.po
@@ -6,8 +6,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: kdvi\n"
 "POT-Creation-Date: 1998-10-13 13:31+0200\n"
-"PO-Revision-Date: 1998-01-28 23:52 CET\n"
-"Last-Translator: Serge \"sergio\" Tellène <tells@mygale.org>\n"
+"PO-Revision-Date: 1998-12-04 22:41 CET\n"
+"Translator: Serge \"sergio\" Tellène <tells@mygale.org>\n"
+"Last-Translator: Francois-Xavier DURANCEAU <Francois-Xavier.Duranceau@loria.fr>\n"
 "Language-Team: Français\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; \n"
@@ -87,9 +88,8 @@ msgid "Preferences ..."
 msgstr "Préférences..."
 
 #: kdvi.cpp:175
-#, fuzzy
 msgid "&New"
-msgstr "&Suivante"
+msgstr "&Nouveau"
 
 #: kdvi.cpp:176
 msgid "&Open ..."
@@ -685,30 +685,3 @@ msgstr "Multipage"
 msgid "Printing method"
 msgstr "Méthode d'impression"
 
-#~ msgid "Appearance"
-#~ msgstr "Apparence"
-
-#~ msgid "Fonts"
-#~ msgstr "Polices"
-
-#~ msgid "Print"
-#~ msgstr "Imprimer"
-
-#~ msgid "&Remove"
-#~ msgstr "Enleve&r"
-
-#~ msgid "&Contents"
-#~ msgstr "&Contenu"
-
-#~ msgid "About &Qt"
-#~ msgstr "&A propos de Qt"
-
-#~ msgid "About Kdvi"
-#~ msgstr "A propos de Kdvi"
-
-#~ msgid ""
-#~ "kdvi - TeX DVI viewer\n"
-#~ "Version "
-#~ msgstr ""
-#~ "kdvi - Visionneuse TeX DVI\n"
-#~ "Version "
