--- a/po/fr/kiconedit.po
+++ b/po/fr/kiconedit.po
@@ -7,7 +7,8 @@ msgstr ""
 "Project-Id-Version: kiconedit\n"
 "POT-Creation-Date: 1998-11-16 01:58+0100\n"
 "PO-Revision-Date: 1998-12-09 12:00+0100\n"
-"Last-Translator: Francois-Xavier DURANCEAU <Francois-Xavier.Duranceau@loria.fr>\n"
+"Last-Translator: Francois-Xavier DURANCEAU "
+"<Francois-Xavier.Duranceau@loria.fr>\n"
 "Language-Team: Français <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
@@ -298,8 +299,10 @@ msgstr ""
 "Grille de dessin d'icône\n"
 "\n"
 "La grille d'icône est la zone où vous dessinez les icônes.\n"
-"Vous pouvez zoomer en avant ou en arrière en utilisant les loupes de la barre d'outils.\n"
-"(Note : Appuzer quelques secondes sur le bouton de loupe pour zoomer vers une échelle prédéfinie)"
+"Vous pouvez zoomer en avant ou en arrière en utilisant les loupes de la "
+"barre d'outils.\n"
+"(Note : Appuzer quelques secondes sur le bouton de loupe pour zoomer vers "
+"une échelle prédéfinie)"
 
 #: kiconedit.cpp:790
 msgid ""
@@ -406,8 +409,8 @@ msgid ""
 msgstr ""
 "Imprimer\n"
 "\n"
-"Ouvre une boîte de dialogue pour l'impression de l'icône courante. (Ne fonctionne pas"
-" comme attendu) "
+"Ouvre une boîte de dialogue pour l'impression de l'icône courante. (Ne "
+"fonctionne pas comme attendu) "
 
 #: kiconedit.cpp:828
 msgid ""
@@ -453,11 +456,11 @@ msgstr ""
 "\n"
 "Colle le contenu du presse-papiersdans l'icône courante.\n"
 "\n"
-"Si le contenu est plus grand que l'icône courante, vous pouvez le coller dans une nouvelle "
-"fenêtre.\n"
+"Si le contenu est plus grand que l'icône courante, vous pouvez le coller "
+"dans une nouvelle fenêtre.\n"
 "\n"
-"(Note : Sélectionnez \"Paste transparent pixels\" dans la boîte de dialogue si vous "
-"voulez aussi le coller de façon transparente)"
+"(Note : Sélectionnez \"Paste transparent pixels\" dans la boîte de dialogue "
+"si vous voulez aussi le coller de façon transparente)"
 
 #: kiconedit.cpp:843
 msgid ""
@@ -490,8 +493,8 @@ msgstr ""
 "Niveaux de gris\n"
 "\n"
 "Convertit l'icône courante en niveuax de gris.\n"
-"(Attention : Le résultat pourrait contenir des couleurs absentes de la palette"
-" de couleurs de l'icône"
+"(Attention : Le résultat pourrait contenir des couleurs absentes de la "
+"palette de couleurs de l'icône"
 
 #: kiconedit.cpp:854
 msgid ""
@@ -505,7 +508,8 @@ msgstr ""
 "\n"
 "Zoom arrière de un.\n"
 "\n"
-"(Note : Maintenir le bouton enfoncé quelques secondes pour zoomer à une échelle prédéfinie)"
+"(Note : Maintenir le bouton enfoncé quelques secondes pour zoomer à une "
+"échelle prédéfinie)"
 
 #: kiconedit.cpp:858
 msgid ""
@@ -519,7 +523,8 @@ msgstr ""
 "\n"
 "Zoom avant de un.\n"
 "\n"
-"(Note : Maintenir le bouton enfoncé quelques secondes pour zoomer à une échelle prédéfinie)"
+"(Note : Maintenir le bouton enfoncé quelques secondes pour zoomer à une "
+"échelle prédéfinie)"
 
 #: kiconedit.cpp:862
 msgid ""
@@ -679,8 +684,9 @@ msgstr ""
 "\n"
 "Efface les pixels. Rend les pixels transparents\n"
 "\n"
-"(Note : Si vous voulez dessiner en transparence avec un outils différent, cliquez d'abord "
-"sur \"Erase\" et ensuite sur l'outil que vous voulez utiliser)"
+"(Note : Si vous voulez dessiner en transparence avec un outils différent, "
+"cliquez d'abord sur \"Erase\" et ensuite sur l'outil que vous voulez "
+"utiliser)"
 
 #: kicongrid.cpp:684
 msgid "There was an error loading a blank image.\n"
@@ -764,7 +770,8 @@ msgstr "Groupe"
 
 #: kicon.cpp:48
 msgid "There was an error removing temporary backup file:\n"
-msgstr "Une erreur s'est poduite pendant la suppression du fichier temporaire :\n"
+msgstr ""
+"Une erreur s'est poduite pendant la suppression du fichier temporaire :\n"
 
 #: kicon.cpp:74 kicon.cpp:258 kicon.cpp:342 kicon.cpp:445
 msgid ""
