--- a/po/fr/ksnapshot.po
+++ b/po/fr/ksnapshot.po
@@ -7,7 +7,8 @@ msgstr ""
 "Project-Id-Version: KSNAPSHOT \n"
 "POT-Creation-Date: 1998-11-30 01:40+0100\n"
 "PO-Revision-Date: 1998-12-01 23:00+010\n"
-"Last-Translator: Francois-Xavier DURANCEAU <Francois-Xavier.Duranceau@loria.fr>\n"
+"Last-Translator: Francois-Xavier DURANCEAU "
+"<Francois-Xavier.Duranceau@loria.fr>\n"
 "Language-Team: Français <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
